2008-09-30  Eli Zaretskii  <eliz@gnu.org>

	* build_w32.bat (GCCBuild): Use "-gdwarf-2 -g3" instead of
	"-gstabs+ -ggdb3".

	* w32/subproc/build.bat (GCCBuild): Likewise.

2008-09-30  David Russo  <d-russo@ti.com>  (tiny change)

	* job.c (construct_command_argv_internal): Avoid extra backslash
	in batch-mode Unixy shells.  Under DB_JOBS, display the contents
	of the batch file.

2008-05-31  Eli Zaretskii  <eliz@gnu.org>

	* README.W32.template: Remove obsolete text about non-support for
	-jN without Unixy shell.  Remove obsolete text about not supplying
	Visual Studio project files (we do supply them).  Modify text to
	prefer GCC builds to MSC builds.

2008-04-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/make.texi (Empty Targets): Fix typo.

2008-03-27  Paul Smith  <psmith@gnu.org>

	Fix Savannah bug #22379:
	* ar.c (ar_glob_match): Zero the allocated structure.
	* read.c (parse_file_seq): Ditto.

2008-03-08  Brian Dessent  <brian@dessent.net>

	* maintMakefile: Update Translation Project location.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* variable.c (target_environment): Don't use shell_var if its
	`value' field is NULL.

2007-12-22  Eli Zaretskii  <eliz@gnu.org>

	Suggested by Juan Manuel Guerrero <juan.guerrero@gmx.de>:

	* Makefile.DOS.template (info_TEXINFOS): Remove unused variable.
	(TEXINFOS): Value changed to `doc/make.texi'.
	(.SUFFIXES): Use .texi instead of .texinfo.
	(make.info, make.dvi): Depend on doc/make.texi.
	(.texi.info): New target, instead of ".texinfo.info".  Change -I
	switch to $(MAKEINFO) to look in doc/.  Use --no-split.
	(.texi): New target, instead of ".texinfo".  Change -I switch to
	$(MAKEINFO) to look in doc/.  Use --no-split.
	(.texi.dvi): New target, instead of ".texinfo.dvi".  Change -I
	switch to $(MAKEINFO) to look in doc/.
	(install-info-am, uninstall-info): Don't look for "*.i[0-9]" and
	"*.i[0-9][0-9]" (due to --no-split above).
	(noinst_TEXINFOS, TEXI2HTML, TEXI2HTML_FLAGS): New variables.